# splex

./: .dockerignore  .env.example  .gitignore  .releaserc.json  AGENTS.md  Dockerfile  Dockerfile.builder  LICENSE  README.md  docker-compose.yml  renovate.json  sonar-project.properties
backend/: manage.py  pyproject.toml
backend/src/config/: asgi.py  urls.py
backend/src/config/settings/: base.py  local.py  test.py
backend/src/splex/accounts/: admin.py  apps.py  email_copy.py  models.py  payment_services.py  payments.py  services.py
backend/src/splex/accounts/api/: serializers.py  urls.py  views.py
backend/src/splex/accounts/email_locales/: az.json  be.json  bg.json  bs.json  ca.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  fi.json  fr.json  ga.json  hr.json  hu.json  hy.json  is.json  it.json  ka.json  kk.json  la.json  lb.json  lt.json  lv.json  mk.json  mt.json  nl.json  no.json  pl.json  pt.json  rm.json  ro.json  ru.json  sk.json  sl.json  sq.json  sr.json  sv.json  (+2 more)
backend/src/splex/accounts/migrations/: 0001_initial.py  0002_user_avatar_url.py  0003_user_locale.py  0004_user_location_tracking_enabled.py  0005_user_avatar_attribution.py  0007_paymentmethod.py  (+2 more)
backend/src/splex/activity/: admin.py  apps.py  events.py  models.py  services.py
backend/src/splex/balances/: apps.py  selectors.py
backend/src/splex/currency/: admin.py  apps.py  constants.py  models.py  services.py
backend/src/splex/expenses/: admin.py  apps.py  models.py  receipts.py  services.py  services_update.py
backend/src/splex/friends/: admin.py  apps.py  models.py  serializers.py  services.py
backend/src/splex/groups/: admin.py  apps.py  models.py  services.py  statistics.py
backend/src/splex/imports/: apps.py  split_pro_client.py  split_pro_service.py  splitwise_client.py  splitwise_service.py  summary.py
backend/src/splex/invitations/: admin.py  apps.py  models.py  services.py
backend/src/splex/ledger/: selectors.py  serializers.py
backend/src/splex/notifications/: admin.py  apps.py  models.py  reminders.py  services.py  translations.py
backend/src/splex/participants/: admin.py  apps.py  models.py  services.py
backend/src/splex/settlements/: admin.py  apps.py  models.py  services.py
backend/src/splex/shared/: admin.py  api.py  api_views.py  apps.py  errors.py  frontend_i18n.py  locale.py  managers.py  media.py  models.py  money.py  open_source.py  scheduler.py  tos.py  uploads.py
backend/src/splex/sync/: admin.py  apps.py  models.py
backend/tests/: test_account_deletion_integration.py  test_account_email_translations.py  test_accounting.py  test_accounts_api.py  test_activity_api.py  test_api_errors.py  test_balances_outstanding.py  test_balances_simplified.py  test_currency_api.py  test_currency_services.py  test_database_settings.py  test_expense_splitting.py  test_expenses_update.py  test_friends_api.py  test_google_auth.py  test_group_statistics.py  test_groups_api.py  test_groups_services.py  test_image_processing.py  test_imports_split_pro.py  test_imports_splitwise.py  test_invitations.py  test_ledger_ordering.py  test_locale_helpers.py  test_location_suggestions.py  test_magic_login.py  test_management_commands.py  test_media_cleanup.py  test_notification_dispatch.py  test_notification_translations.py  test_open_source_components.py  test_open_source_loader.py  test_participants.py  test_payment_methods.py  test_public_tos.py  test_purge_soft_deleted.py  test_push_endpoint_cleanup.py  test_receipts.py  test_reminders.py  test_settlements.py  (+6 more)
(+507 files in other folders)
