[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splex-backend"
version = "1.0.2"
description = "Self-hosted expense splitter backend"
requires-python = ">=3.12"
dependencies = [
  "Django>=6.0.5,<6.1",
  "djangorestframework>=3.17.1,<3.18",
  "djangorestframework-simplejwt>=5.5.1,<6",
  "django-cors-headers>=4.9.0,<5",
  "dj-database-url>=3.1.2,<4",
  "python-dotenv>=1.2.2,<2",
  "requests>=2.34.0,<3",
  "gunicorn>=26.0.0,<27",
  "pywebpush>=2.3.0,<3",
  "Pillow>=12.2.0,<13",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10",
  "pytest-django>=4.12.0,<5",
  "ruff>=0.15.12,<1",
]
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
pythonpath = ["src"]
testpaths = ["tests", "src"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B904"]
