[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splex-backend"
version = "2.6.17"
description = "Self-hosted expense splitter backend"
requires-python = ">=3.12"
authors = [
  { name = "steve192" },
]
license = { text = "Splex Non-Commercial Source License 1.0" }
urls = { Homepage = "https://github.com/steve192/splex", Repository = "https://github.com/steve192/splex" }
dependencies = [
  "Django==6.0.7",
  "djangorestframework==3.17.1",
  "djangorestframework-simplejwt==5.5.1",
  "django-cors-headers==4.9.0",
  "dj-database-url==3.1.2",
  "psycopg[binary]==3.3.4",
  "python-dotenv==1.2.2",
  "requests==2.34.2",
  "gunicorn==26.0.0",
  "pywebpush==2.3.0",
  "Pillow==12.3.0",
  "whitenoise==6.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "pytest-django==4.12.0",
  "ruff==0.15.21",
]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"splex.accounts" = ["email_locales/*.json"]
"splex.notifications" = ["notification_locales/*.json"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
pythonpath = ["src"]
testpaths = ["tests", "src"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B904"]
